--- a/src/assets/sass/custom-styles.scss
+++ b/src/assets/sass/custom-styles.scss
@@ -242,3 +242,11 @@ button.swal2-cancel.swal2-styled:hover {
 .dropdown .dropdown-toggle:after {
     margin-top: 7px;
 }
+
+.form-check-input {
+    margin-left: 0;
+}
+
+.float-right{
+    float: right;
+}
