--- a/src/app/components/admin/my-products/my-products.component.scss
+++ b/src/app/components/admin/my-products/my-products.component.scss
@@ -1,5 +1,7 @@
 .shops {
     text-align: center;
+    margin-top: 50px;
+
     ul {
         list-style: none;
         -ms-box-orient: horizontal;
@@ -21,6 +23,7 @@
             img {
                 margin-bottom: 10px;
             }
+
             .card-normal {
                 min-height: 260px;
                 height: auto;
@@ -34,17 +37,21 @@
         }
     }
 }
+
 .custom-class {
     .dropdown-menu.show {
         max-height: 300px;
         overflow-y: auto;
     }
+
     .subImagesList {
         margin-top: 10px;
         width: 100%;
+
         div {
             text-align: center;
             margin-bottom: 5px;
+
             span {
                 padding: 5px;
                 background: #eee;
@@ -55,17 +62,20 @@
                     color: #f5593d;
                 }
             }
+
             img {
                 margin-right: 5px;
             }
         }
     }
+
     @media (max-width: 767px) {
-        .form-control + .form-control-feedback {
+        .form-control+.form-control-feedback {
             margin-top: 0;
         }
     }
 }
+
 @media (max-width: 575px) {
     .title {
         .card-normal {
@@ -74,12 +84,14 @@
             margin: 0 auto;
         }
     }
+
     .shops {
         ul li {
             margin-right: 0;
         }
     }
 }
+
 @media (max-width: 767px) {
     .shops {
         .row {
@@ -92,17 +104,20 @@
     .radio-group {
         height: 70px;
     }
+
     .radio-group.has-danger {
         height: 90px;
 
         .form-control {
             height: 70px;
         }
+
         .form-control-feedback {
             top: 0 !important;
         }
     }
 }
+
 agm-map {
     height: 300px;
 }
