Update home page styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="outer-wrapper" *ngIf="showHeader">
+<div class="outer-wrapper" *ngIf="showHeader && isDistrictsLoaded">
     <app-navbar></app-navbar>
     <router-outlet></router-outlet>
     <app-footer></app-footer>
