--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,7 +4,7 @@
             <div class="col-md-4">
                 <div class="card-normal no-decorations" style="min-height: 200px;">
                     <h3>Find your product</h3>
-                    <form [formGroup]="searchForm" (ngSubmit)="searchItems()">
+                    <form [formGroup]="searchForm" (ngSubmit)="searchItems(false)">
                         <div class="form-group">
                             <label class="form-check-label">Search</label>
                             <input type="text" class="form-control" formControlName="searchTerm" id="searchTerm"
@@ -41,39 +41,22 @@
                         Loading...
                     </div>
                     <div *ngIf="!isLoading && products.length>0">
-                        <div class="card-normal no-decorations" style="margin-bottom: 10px;">
-                            <agm-map [latitude]="lat" [longitude]="lng" [zoom]="12" [disableDefaultUI]="false"
-                                [zoomControl]="true" [scrollwheel]="null" [gestureHandling]="'cooperative'"
-                                (mapClick)="mapClick($event)">
-                                <agm-marker *ngFor="let location of locations; let i = index" [latitude]="location.lat"
-                                    [longitude]="location.lng" (markerClick)=markerClick(infoWindow,location)>
-                                    <agm-info-window #infoWindow>
-                                        <p [innerHTML]="infoWindowData"></p>
-                                        <div *ngFor="let product of infoWindowProducts;let last=last">
-                                            <p><b>{{product.name|titlecase}} {{(product.shopName)}}</b></p>
-                                            <p>{{product.price}}</p>
-                                            <a [routerLink]="['/products',product.slug]">More...</a>
-                                            <hr *ngIf="!last">
-                                        </div>
-                                    </agm-info-window>
-                                </agm-marker>
-                            </agm-map>
-                        </div>
+                        <p>{{products.length}} item(s) found.</p>
                         <ng-container *ngFor="let product of products">
-                            <div class="card-normal" [routerLink]="['/products',product.slug]">
+                            <div class="card-normal product" [routerLink]="['/products',product.slug]">
                                 <div class="row">
                                     <div class="col-sm-4">
                                         <img width="170" [src]="product.image_url" alt="product Image"
                                             class="img-thumbnail img-responsive">
                                     </div>
                                     <div class="col-sm-8">
-                                        <p><b>{{product.name|titlecase}}</b></p>
+                                        <p class="product-title"><b>{{product.name|titlecase}}</b></p>
+                                        <p *ngIf="product.category_id==1">{{product.shop.name|titlecase}}</p>
+                                        <p>{{product.shop.address|titlecase}}, {{product.shop.city.name|titlecase}}</p>
                                         <p class="price">Rs.
                                             {{product.category_id==1?(product.sellable_item.retail_price|currency:'':''):((product.rentable_item.price_per_month|currency:'':'')+'
                                             Per month')}}
                                         </p>
-                                        <p *ngIf="product.category_id==1">{{product.shop.name|titlecase}}</p>
-                                        <p>{{product.shop.address|titlecase}}, {{product.shop.city.name|titlecase}}</p>
                                     </div>
                                 </div>
                             </div>
