--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -14,19 +14,7 @@
     .img-thumbnail {
         box-shadow: none !important;
         max-height: 130px;
-    }
-}
-
-agm-map {
-    height: 300px;
-
-    p,
-    a {
-        font-size: 12px;
-    }
-
-    hr {
-        margin: 5px 0 !important;
+        padding: 0;
     }
 }
 
@@ -35,8 +23,18 @@ agm-map {
     margin-top: 200px;
 }
 
+.product .product-title {
+    font-weight: bold;
+}
+
 .input-img {
     position: absolute;
     right: 7px;
     bottom: 10px;
+}
+
+@media (max-width: 576px) {
+    .product .product-title {
+        margin-top: 15px;
+    }
 }
