--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -2,6 +2,7 @@
     cursor: pointer;
     padding: 10px !important;
     margin-bottom: 10px;
+    position: relative;
 
     &:hover {
         background-color: #eee;
@@ -16,11 +17,21 @@
         max-height: 130px;
         padding: 0;
     }
+
 }
 
-.no-products {
+.spinner-outer, .no-products {
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    width: 100%;
     text-align: center;
-    margin-top: 200px;
+}
+
+.products {
+    min-height: 300px;
+    position: relative;
 }
 
 .product .product-title {
