--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -2,12 +2,19 @@
     <div class="container">
         <div class="navbar-translate">
             <a routerLink="/"> <img src="assets/img/logo-big.png" width="200px" class="navbar-brand"></a>
+            <a routerLink="/cart" class="nav-link cart" title="Cart" *ngIf="onMobile">
+                <i class="nc-icon nc-cart-simple"></i>
+                <span *ngIf="cartCount > 0">{{cartCount}}</span>
+            </a>
             <button class="navbar-toggler navbar-burger" type="button" data-toggle="collapse"
                 data-target="#navbarToggler" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                 aria-label="Toggle navigation" (click)="sidebarToggle()">
-                <span class="navbar-toggler-bar"></span>
-                <span class="navbar-toggler-bar"></span>
-                <span class="navbar-toggler-bar"></span>
+                <div *ngIf="!sidebarVisible">
+                    <span class="navbar-toggler-bar"></span>
+                    <span class="navbar-toggler-bar"></span>
+                    <span class="navbar-toggler-bar"></span>
+                </div>
+                <span *ngIf="sidebarVisible" class="nc-icon nc-simple-remove"></span>
             </button>
         </div>
         <div class="navbar-collapse" id="navbarToggler">
@@ -47,8 +54,8 @@
                 </li>
                 <!-- end - admin only pages -->
 
-                <li class="nav-item cart">
-                    <a routerLink="/cart" class="nav-link" title="Cart">
+                <li class="nav-item cart" *ngIf="!onMobile">
+                    <a routerLink="/cart" class="nav-link cart-item" title="Cart">
                         <i class="nc-icon nc-cart-simple"></i>
                         <span *ngIf="cartCount > 0">{{cartCount}}</span>
                     </a>
