--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -1,12 +1,14 @@
 .navbar .navbar-brand {
     padding: 0 15px !important;
 }
+
 .navbar .navbar-nav .dropdown-menu {
     margin-top: -20px;
 }
 
 li {
     cursor: pointer;
+
     i {
         top: 2px !important;
     }
@@ -18,4 +20,46 @@ li {
 
 .top {
     box-shadow: none !important;
+}
+
+.nc-icon.nc-simple-remove {
+    font-weight: bold;
+    color: #66615b;
+}
+
+.navbar-toggler-bar {
+    height: 2px;
+}
+
+.navbar-toggler .navbar-toggler-bar+.navbar-toggler-bar,
+.navbar-toggler .navbar-toggler-icon+.navbar-toggler-icon {
+    margin-top: 6px;
+}
+
+.navbar-collapse::after {
+    background-color: #fff;
+}
+
+.nav-link.cart-item {
+    display: block !important;
+}
+
+.nav-link.cart {
+    position: absolute;
+    right: 50px;
+    color: #66615B;
+
+}
+
+.nav-link.cart span,
+.nav-item.cart span {
+    background: red;
+    padding: 2px 7px;
+    border-radius: 24px;
+    color: white;
+    font-weight: 600;
+}
+
+.navbar .navbar-nav .nav-item .nav-link {
+    display: flex;
 }
