--- a/src/assets/sass/custom-styles.scss
+++ b/src/assets/sass/custom-styles.scss
@@ -49,7 +49,7 @@ h4,
     color: #000;
     border: 1px solid #eee;
     padding: 20px;
-    z-index: 1;
+    // z-index: 1;
     box-shadow: 0 6px 10px -4px rgba(0, 0, 0, 0.15);
 
     &.no-decorations:hover {
@@ -147,6 +147,10 @@ button.swal2-cancel.swal2-styled:hover {
     margin-top: 15px;
 }
 
+.pagination .page-item a.page-link {
+    text-align: center !important;
+}
+
 .card-register {
     background-color: #16d2be;
     margin: 50px 0;
@@ -231,17 +235,6 @@ button.swal2-cancel.swal2-styled:hover {
     font-size: 12px;
 }
 
-.nav-item.cart span {
-    background: red;
-    padding: 2px 7px;
-    border-radius: 24px;
-    color: white;
-}
-
-.navbar .navbar-nav .nav-item .nav-link {
-    display: flex;
-}
-
 .dropup .dropdown-toggle:after,
 .dropdown .dropdown-toggle:after {
     margin-top: 7px;
@@ -257,4 +250,9 @@ button.swal2-cancel.swal2-styled:hover {
 
 .text-left {
     text-align: left;
+}
+
+.dropdown-menu {
+    height: 400px;
+    overflow-y: scroll;
 }
