--- a/src/app/components/Auth/admin-password-reset-request/admin-password-reset-request.component.html
+++ b/src/app/components/Auth/admin-password-reset-request/admin-password-reset-request.component.html
@@ -5,7 +5,7 @@
             <div class="col-lg-4 col-sm-6 mr-auto ml-auto">
                 <div class="card card-register card-admin">
                     <div class="text-center" style="background-color: white;border-radius:8px;">
-                        <a routerLink="/"> <img src="assets/img/logo-big.png" width="200px"></a>
+                        <a href="/"><img src="assets/img/logo-big.png" width="200px"></a>
                     </div>
                     <br>
                     <h3 class="title" style="margin-top: 10px;font-weight: bold;color: white;">Request for password
