--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -14,7 +14,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="slider">
-                            <div *ngFor="let file of product.files;" class="mySlides">
+                            <div *ngFor="let file of images;" class="mySlides">
                                 <div style="background-image: url('{{imagePath + file.location}}');
                             background-repeat: no-repeat;
                             background-position: center;
@@ -25,7 +25,7 @@
                                 <a class="next" (click)="plusSlides(1)">❯</a>
                             </div>
                             <div class="slider-row">
-                                <div *ngFor="let file of product.files; let i = index" class="column">
+                                <div *ngFor="let file of images; let i = index" class="column">
                                     <div style="background-image: url('{{imagePath + file.location}}');
                                     background-repeat: no-repeat;
                                     background-position: center;
